fixed styling on back link so a-tag didnt stretch across page

--- a/app/assets/stylesheets/tacs.scss
+++ b/app/assets/stylesheets/tacs.scss
@@ -25,3 +25,7 @@
 .delete-link a:hover {
  color: #ce001b;
 }
+
+#back-page {
+	display: inline-block;
+}
